--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,18 @@
 	</properties>
 	<dependencyManagement>
 		<dependencies>
+
+			<dependency>
+				<groupId>org.scala-lang</groupId>
+				<artifactId>scala-library</artifactId>
+				<version>2.11.2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.typesafe.akka</groupId>
+				<artifactId>akka-actor_2.10</artifactId>
+				<version>2.3.6</version>
+			</dependency>
 			<!-- Common libs -->
 			<dependency>
 				<groupId>org.springframework</groupId>
