--- a/dubbo-demo/pom.xml
+++ b/dubbo-demo/pom.xml
@@ -33,4 +33,18 @@
 		<module>dubbo-demo-provider</module>
 		<module>dubbo-demo-consumer</module>
 	</modules>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.10.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-actor_2.10</artifactId>
+			<version>2.3.6</version>
+		</dependency>
+	</dependencies>
 </project>
