--- a/pom.xml
+++ b/pom.xml
@@ -149,17 +149,7 @@
 	<dependencyManagement>
 		<dependencies>
 
-			<dependency>
-				<groupId>org.scala-lang</groupId>
-				<artifactId>scala-library</artifactId>
-				<version>2.11.2</version>
-			</dependency>
 
-			<dependency>
-				<groupId>com.typesafe.akka</groupId>
-				<artifactId>akka-actor_2.10</artifactId>
-				<version>2.3.6</version>
-			</dependency>
 			<!-- Common libs -->
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -381,6 +371,17 @@
 			<groupId>com.googlecode.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.10.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-actor_2.10</artifactId>
+			<version>2.3.6</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -401,72 +402,72 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<useSystemClassLoader>true</useSystemClassLoader>
-					<forkMode>once</forkMode>
-					<argLine>${argline}</argLine>
-					<systemProperties>
-						<!-- common shared -->
-						<property>
-							<name>transporter</name>
-							<value>${transporter}</value>
-						</property>
-						<property>
-							<name>serialization</name>
-							<value>${serialization}</value>
-						</property>
-						<!-- server side -->
-						<property>
-							<name>port</name>
-							<value>${port}</value>
-						</property>
-						<property>
-							<name>threadpool</name>
-							<value>${threadpool}</value>
-						</property>
-						<property>
-							<name>threads</name>
-							<value>${threads}</value>
-						</property>
-						<property>
-							<name>iothreads</name>
-							<value>${iothreads}</value>
-						</property>
-						<!-- client side -->
-						<property>
-							<name>server</name>
-							<value>${server}</value>
-						</property>
-						<property>
-							<name>timeout</name>
-							<value>${timeout}</value>
-						</property>
-						<property>
-							<name>length</name>
-							<value>${length}</value>
-						</property>
-						<property>
-							<name>connections</name>
-							<value>${connections}</value>
-						</property>
-						<property>
-							<name>base</name>
-							<value>${base}</value>
-						</property>
-						<property>
-							<name>concurrent</name>
-							<value>${concurrent}</value>
-						</property>
-						<property>
-							<name>runs</name>
-							<value>${runs}</value>
-						</property>
-						<property>
-							<name>onerror</name>
-							<value>${onerror}</value>
-						</property>
-					</systemProperties>
-				</configuration>
+				<!--<configuration>-->
+					<!--<useSystemClassLoader>true</useSystemClassLoader>-->
+					<!--<forkMode>once</forkMode>-->
+					<!--<argLine>${argline}</argLine>-->
+					<!--<systemProperties>-->
+						<!--&lt;!&ndash; common shared &ndash;&gt;-->
+						<!--<property>-->
+							<!--<name>transporter</name>-->
+							<!--<value>${transporter}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>serialization</name>-->
+							<!--<value>${serialization}</value>-->
+						<!--</property>-->
+						<!--&lt;!&ndash; server side &ndash;&gt;-->
+						<!--<property>-->
+							<!--<name>port</name>-->
+							<!--<value>${port}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>threadpool</name>-->
+							<!--<value>${threadpool}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>threads</name>-->
+							<!--<value>${threads}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>iothreads</name>-->
+							<!--<value>${iothreads}</value>-->
+						<!--</property>-->
+						<!--&lt;!&ndash; client side &ndash;&gt;-->
+						<!--<property>-->
+							<!--<name>server</name>-->
+							<!--<value>${server}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>timeout</name>-->
+							<!--<value>${timeout}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>length</name>-->
+							<!--<value>${length}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>connections</name>-->
+							<!--<value>${connections}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>base</name>-->
+							<!--<value>${base}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>concurrent</name>-->
+							<!--<value>${concurrent}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>runs</name>-->
+							<!--<value>${runs}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>onerror</name>-->
+							<!--<value>${onerror}</value>-->
+						<!--</property>-->
+					<!--</systemProperties>-->
+				<!--</configuration>-->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
