--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
                 <module>dubbo-admin</module>
                 <module>dubbo-demo</module>
         <module>hessian-lite</module>
+		<module>dubbo-future-simple</module>
 	</modules>
 	<profiles>
 		<profile>
@@ -474,6 +475,17 @@
 				<artifactId>maven-deploy-plugin</artifactId>
 				<configuration>
 					<skip>${skip_maven_deploy}</skip>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<target>1.6</target>
+					<source>1.6</source>
+					<encoding>${project.build.sourceEncoding}</encoding>
+
 				</configuration>
 			</plugin>
 		</plugins>
