--- a/dubbo/pom.xml
+++ b/dubbo/pom.xml
@@ -21,7 +21,7 @@
 		<artifactId>dubbo-parent</artifactId>
 		<version>2.5.4-SNAPSHOT</version>
 	</parent>
-	<artifactId>dubbo</artifactId>
+	<artifactId>dubbo-async</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<description>The all in one project of dubbo</description>
