modify artifactId from dubbo to dubbo-async

--- a/dubbo-demo/dubbo-demo-consumer/pom.xml
+++ b/dubbo-demo/dubbo-demo-consumer/pom.xml
@@ -36,7 +36,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
-			<artifactId>dubbo</artifactId>
+			<artifactId>dubbo-async</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
@@ -157,7 +157,7 @@
 							<artifactItems>
 								<artifactItem>
 									<groupId>com.alibaba</groupId>
-									<artifactId>dubbo</artifactId>
+									<artifactId>dubbo-async</artifactId>
 									<version>${project.parent.version}</version>
 									<outputDirectory>${project.build.directory}/dubbo</outputDirectory>
 									<includes>META-INF/assembly/**</includes>
