--- a/dubbo-admin/pom.xml
+++ b/dubbo-admin/pom.xml
@@ -34,7 +34,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.alibaba</groupId>
-			<artifactId>dubbo</artifactId>
+			<artifactId>dubbo-async</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
